--- a/client/static/index.html
+++ b/client/static/index.html
@@ -1318,15 +1318,48 @@
 
 		<!-- Timeline Responsive -->
 		<article id="cd-timeline" class="cd-container">
+			<!-- Pagerduty -->
+			<div class="cd-timeline-block">
+				<div class="cd-timeline-img my-red">
+					<img src="img/ed2.png" alt="Science">
+				</div>
+				<div class="cd-timeline-content">
+					<h2>Site Reliability Engineering Intern</h2>
+					<h3>PAGERDUTY</h3>
+					<span class="cd-date">May 2018 - August 2018</span>
+				</div>
+			</div>
+			<!-- NUS -->
+			<div class="cd-timeline-block">
+				<div class="cd-timeline-img my-red">
+					<img src="img/ed1.png" alt="Engineering">
+				</div>
+				<div class="cd-timeline-content">
+					<h2>Study Abroad</h2>
+					<h3>NATIONAL UNIVERSITY OF SINGAPORE</h3>
+					<span class="cd-date">January 2018 - May 2018</span>
+				</div>
+			</div>
 			<!-- Yelp -->
 			<div class="cd-timeline-block">
 				<div class="cd-timeline-img my-red">
 					<img src="img/ed2.png" alt="Science">
 				</div>
 				<div class="cd-timeline-content">
-					<h2>Software Engineer</h2>
-					<h3>Yelp</h3>
+					<h2>Software Engineering Intern</h2>
+					<h3>YELP</h3>
 					<span class="cd-date">August 2017 - December 2017</span>
+				</div>
+			</div>
+			<!-- Webveloper -->
+			<div class="cd-timeline-block">
+				<div class="cd-timeline-img my-red">
+					<img src="img/ed2.png" alt="Science">
+				</div>
+				<div class="cd-timeline-content">
+					<h2>Co-Founder and Head Developer</h2>
+					<h3>WEBVELOPER</h3>
+					<span class="cd-date">March 2017 - Present</span>
 				</div>
 			</div>
 			<!-- IBM -->
@@ -1335,7 +1368,7 @@
 					<img src="img/ed2.png" alt="Science">
 				</div>
 				<div class="cd-timeline-content">
-					<h2>Javascript Developer</h2>
+					<h2>Javascript Developer (Intern)</h2>
 					<h3>IBM</h3>
 					<span class="cd-date">January 2017 - April 2017</span>
 				</div>
@@ -1346,7 +1379,7 @@
 					<img src="img/ed2.png" alt="Science">
 				</div>
 				<div class="cd-timeline-content">
-					<h2>Software Developer</h2>
+					<h2>Software Developer Intern</h2>
 					<h3>ENCIRCLE</h3>
 					<span class="cd-date">May 2016 - August 2016</span>
 				</div>
@@ -1360,17 +1393,6 @@
 					<h2>Candidate for Bachelors of Software Engineering</h2>
 					<h3>UNIVERSITY OF WATERLOO</h3>
 					<span class="cd-date">September 2015 - Present</span>
-				</div>
-			</div>
-			<!-- TruTech -->
-			<div class="cd-timeline-block">
-				<div class="cd-timeline-img my-red">
-					<img src="img/ed2.png" alt="Science">
-				</div>
-				<div class="cd-timeline-content">
-					<h2>Founder and Head Developer</h2>
-					<h3>TRUTECH INNOVATIONS</h3>
-					<span class="cd-date">May 2014 - Present</span>
 				</div>
 			</div>
 			<!-- High School -->
