--- a/client/static/index.html
+++ b/client/static/index.html
@@ -1318,6 +1318,17 @@
 
 		<!-- Timeline Responsive -->
 		<article id="cd-timeline" class="cd-container">
+			<!-- Facebook -->
+			<div class="cd-timeline-block">
+				<div class="cd-timeline-img my-red">
+					<img src="img/ed2.png" alt="Science">
+				</div>
+				<div class="cd-timeline-content">
+					<h2>Software Engineering Intern</h2>
+					<h3>FACEBOOK</h3>
+					<span class="cd-date">January 2019 - May 2019</span>
+				</div>
+			</div>
 			<!-- Pagerduty -->
 			<div class="cd-timeline-block">
 				<div class="cd-timeline-img my-red">
